--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "socket.io": "^4.5.1"
   }
 }
